--- a/LibraryProof/app/src/main/res/values/strings.xml
+++ b/LibraryProof/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="action_add_author">Add New Author</string>
-    <string name="action_search_author">Search Author</string>
+    <string name="action_save_author">Save Author</string>
 
     <string name="title_activity_author_form">Add New Author</string>
     <string name="author_name">Author Name</string>
