--- a/LibraryProof/app/src/main/res/values/strings.xml
+++ b/LibraryProof/app/src/main/res/values/strings.xml
@@ -1,19 +1,24 @@
 <resources>
+    <!-- Global -->
     <string name="app_name">Library Proof</string>
     <string name="welcome_text">Welcome to Library Proof Android Application</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_add">Add</string>
+    <string name="action_save">Save</string>
+
+    <!-- Authors -->
     <string name="label_list_authors">List Authors</string>
     <string name="label_add_authors">Add New Author</string>
     <string name="title_activity_author">Authors</string>
-
-    <string name="action_settings">Settings</string>
-
-    <string name="action_add_author">Add New Author</string>
-    <string name="action_save_author">Save Author</string>
-
     <string name="title_activity_author_form_create">Add New Author</string>
     <string name="title_activity_author_form_update">Edit Author</string>
+    <string name="title_activity_author_form_show">Show Author</string>
     <string name="author_name">Author Name</string>
     <string name="label_save_author">Save Author</string>
     <string name="author_biography">Author Biography</string>
+
+    <!-- Books -->
+    <string name="label_list_books">List Books</string>
+    <string name="title_activity_book">Books</string>
 
 </resources>
