--- a/LibraryProof/src/main/res/values/strings.xml
+++ b/LibraryProof/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_add">Add</string>
     <string name="action_save">Save</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <!-- Authors -->
     <string name="label_list_authors">List Authors</string>
@@ -27,6 +29,17 @@
     <string name="book_isbn">ISBN</string>
     <string name="book_year">Year</string>
     <string name="book_author">Author</string>
+
+    <!-- Libaries -->
+    <string name="label_list_libraries">List Libraries</string>
+    <string name="label_add_libraries">Add New Library</string>
+    <string name="title_activity_library">Libraries</string>
+    <string name="title_activity_library_form_create">Add New Library</string>
+    <string name="title_activity_library_form_update">Edit Library</string>
+    <string name="title_activity_library_form_show">Show Library</string>
+    <string name="library_name">Name</string>
+    <string name="library_location">Street</string>
+    <string name="library_public">Is Public Library?</string>
 
 
 </resources>
